# heatmap-api

./: README.md  alembic.ini  docker-compose.yml  pyproject.toml
migrations/: env.py
src/app/: main.py
src/app/core/: scheduler.py
src/app/core/database/: session.py
src/app/core/env/: settings.py
src/app/domain/models/: dengue_incidence.py
src/app/domain/schemas/: dengue_incidence.py
src/app/domain/usecases/cases/: get_cases_usecase.py
src/app/domain/usecases/ingest/: ingest_usecase.py
src/app/domain/usecases/map/: generate_map_usecase.py
src/app/infra/db/repositories/: dengue_repository.py
src/app/infra/http/: router.py
src/app/infra/http/controllers/admin/: admin_controller.py
src/app/infra/http/controllers/dengue/: cases_controller.py  geojson_controller.py  map_controller.py
src/app/infra/http/security/: security.py
src/app/infra/services/: external_fetcher.py  geojson_service.py  pysus_service.py
src/app/presentation/templates/: map_template.html
src/app/tests/: conftest.py
src/app/tests/unit/: test_get_cases_usecase.py
