[tool.poetry]
name = "heatmap-api"
version = "0.1.0"
description = "FastAPI escalável"
authors = ["Arthur <arthurhenrique5272@gmail.com>"]
readme = "README.md"
packages = [{ include = "app", from = "src" }]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.112.0"
uvicorn = {extras = ["standard"], version = "^0.30.0"}
pydantic = "^2.7.0"
pydantic-settings = "^2.3.0"
sqlalchemy = "^2.0.30"
alembic = "^1.13.1"
python-jose = "^3.3.0"
passlib = "^1.7.4"
bcrypt = "^4.1.2"
psycopg2-binary = "^2.9.10"
apscheduler = "^3.11.0"
folium = "^0.20.0"
asyncpg = "^0.30.0"
pandas = "^2.3.3"
pysus = "^0.4.1"
branca = "^0.7.2"
greenlet = "^3.2.4"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
pytest-asyncio = "^0.23.8"
httpx = "^0.27.0"
ruff = "^0.4.2"
mypy = "^1.10.0"

[tool.poetry.scripts]
dev = "uvicorn:main" # evitamos aqui; usaremos o comando abaixo via poetry run

[tool.ruff]
line-length = 100

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"